--- a/assets/src/scss/import-scss/variables.scss
+++ b/assets/src/scss/import-scss/variables.scss
@@ -57,6 +57,7 @@ $secondary:     $light-gray !default;
 $font-family-base: $ff-light;
 $defaultFont: 'Open Sans', sans-serif;
 $chillFont: 'Lobster', cursive;
+$tahomaFont: 'Tahoma';
 /* - fonts */
 
 /* + link */
