--- a/assets/src/scss/import-scss/reset.scss
+++ b/assets/src/scss/import-scss/reset.scss
@@ -1,4 +1,3 @@
-
 body {
 
   margin: 0;
@@ -64,4 +63,21 @@ input,
 input:before,
 input:focus {
   outline: none;
+}
+
+.transLink {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
+
+.rybbuImg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
