--- a/assets/src/scss/import-scss/reset.scss
+++ b/assets/src/scss/import-scss/reset.scss
@@ -1,3 +1,4 @@
+
 body {
 
   margin: 0;
@@ -46,6 +47,11 @@ h1, h2, h3, h4, h5, h6 {
   color: $black;
   font-weight: bold;
   font-size: 16px;
+
+  @media (max-width: 991px) {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 time {
