--- a/assets/src/scss/import-scss/icon.scss
+++ b/assets/src/scss/import-scss/icon.scss
@@ -380,8 +380,8 @@
     content: "";
     background-image: url("../img/vkicon.png");
     background-repeat: no-repeat;
-    padding: 0 10px;
-    background-size: auto;
+    padding: 2px 10px;
+    background-size: contain;
     background-position: 0 4px;
     margin-left: 5px;
   }
